# mirui-templates

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cargo-generate.toml
.github/workflows/: ci.yml
templates/esp32c3/: Cargo.toml  README.md  cargo-generate.toml  rust-toolchain.toml
templates/esp32c3/.cargo/: config.toml
templates/esp32c3/src/: main.rs
templates/sdl-only/: Cargo.toml  README.md  cargo-generate.toml
templates/sdl-only/src/: main.rs
templates/wasm/: .gitignore  Cargo.toml  README.md  cargo-generate.toml  index.html
templates/wasm/src/: lib.rs
templates/workspace/: Cargo.toml  README.md
templates/workspace/app/: Cargo.toml
templates/workspace/app/src/: lib.rs
templates/workspace/targets/desktop/: Cargo.toml
templates/workspace/targets/desktop/src/: main.rs
templates/workspace/targets/esp32c3/: Cargo.toml
templates/workspace/targets/esp32c3/src/: main.rs
