[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["{{authors}}"]

[lib]
crate-type = ["cdylib"]

# NOTE: this template is a placeholder. The `web-canvas` feature on
# mirui does not exist as of {{mirui-version}}; the template will not
# build until the WebAssembly Surface backend ships. See README for
# the timeline.
[dependencies]
mirui = { version = "{{mirui-version}}", features = ["web-canvas"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document"] }
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
