[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["{{authors}}"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mirui = { version = "{{mirui-version}}", default-features = false, features = ["web-canvas"] }
mirui-macros = "{{mirui-version}}"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.122"
web-sys = { version = "0.3.99", features = [
    "Document",
    "HtmlCanvasElement",
    "Window",
] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
